# lifecycle-platform

./: .env  .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  mise.toml  part4_value_model_integration.md  part5_observability_design.md  pyproject.toml  working_logic.md
ai-session/: README.md  claude-log.md
dags/: DAG.md  helpers.py  sms_reactivation_dag.py
skills/pr-reviewer/: skill.md
skills/unit-test/: skill.md
sql/: audience_query.sql  init_schema.sql  schema.sql
src/: database.py  pipeline.py  repository.py
src/lifecycle_platform/: database.py  pipeline.py  repository.py
src/sql/: audience_query.sql  schema.sql  seed_data.sql
tests/: test_pipeline.py
